# quant_future

./: .env.template  .gitignore  .pre-commit-config.yaml  ACCOUNTS_PAGE_ERROR_FIX.md  ACCOUNT_MANAGEMENT_COMPLETION.md  COMPLETION_SUMMARY.md  CONTRACT_UPDATE_SUMMARY.md  DASHBOARD_422_ERROR_FIX.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FEATURE_DEMO.md  FINAL_API_LEVEL_FIX.md  FINAL_COMPLETE_FIX.md  FINAL_SLICE_ERROR_FIX.md  FRONTEND_API_ERRORS_FIX.md  FRONTEND_ERRORS_FINAL_FIX.md  FRONTEND_INTEGRATION_SUCCESS.md  FULL_STACK_SUCCESS.md  INFLUXDB_INTEGRATION_COMPLETE.md  LOGIN_FIX_SUMMARY.md  MANUAL_TESTING_CHECKLIST.md  MOBILE_MENU_FIX_SUMMARY.md  Makefile  NEW_FEATURES_IMPLEMENTATION.md  PAGES_FIX_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  QUOTES_BATCH_API_FIX.md  README.md  REALTIME_STATUS_FIX.md  RESPONSIVE_SETUP.md  STARTUP_SUCCESS_REPORT.md  SUBMENU_FIX_FINAL.md  SUBMENU_IMPLEMENTATION_SUMMARY.md  ULTIMATE_SLICE_ERROR_FIX.md  USER_GUIDE.md  debug-frontend-api.js  demo_server.py  deployment_info.json  docker-compose.dev.yml  (+63 more)
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.init  ROLE_PERMISSION_SYSTEM_SUMMARY.md  __init__.py  check_db_status.py  check_init_status.py  docker-entrypoint.sh  generate_config.py  init_db.py  init_healthcheck.py  migrate_positions.sql  migrate_positions_complete.sql  migrate_strategies.sql  mock_app.py  pyproject.toml  pytest.ini  requirements.txt  run_init.py  simple_server.py  start_backend.py  temp_auth.py  test_algo_trading_engine.py  test_api_routes.py  test_config.py  test_health_check.py  test_health_check_syntax.py  test_init_db.py  validate_backend_config.py  validate_config.py  validate_env_syntax.py  validate_init_db.py  validate_model_relationships.py  validate_models_simple.py  wait_for_db.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/docs/: backend_container_optimization.md  backtest_analysis_guide.md  backtest_engine_guide.md  configuration_guide.md  enhanced_init_db_guide.md  health_check_guide.md  implementation_summary.md  strategy_validation_guide.md
backend/tests/: conftest.py  run_integration_tests.py  test_backtest_engine.py  test_position_system.py  (+3 more)
(+535 files in other folders)
